# aruna_validation_service

./: .env  Cargo.toml  README.md
src/: main.rs
